# cryptopi

./: README.md  dot.dot  example.cpp  testMain.cpp
CS3307/: GdaxTradePair.cpp  GdaxTradePair.h  README.txt  TradePair.h  doxygen_log.txt
CS3307/html/: annotated.html  class_crypto_pi_main.html  class_trade_pair-members.html  classclient__gdax-members.html  structmkt__symbol.html  structorder-members.html
CS3307/latex/: class_gdax_trade_pair.tex  class_trade_pair.tex  hierarchy.tex  structorder.tex
CS3307/oldtest/: UML.dia
CS3307/test/: CMakeLists.txt
cryptopi/: BitfinexTradePair.cpp  BitfinexTradePair.h  BittrexTradePair.cpp  BittrexTradePair.h  Doxyfile  Makefile  TradePair.cpp  UML.dia  client_gdax.cpp  client_gdax.h  dotout.dot  main.cpp  tags  testGdax.cpp
cryptopi/html/: _bitfinex_trade_pair_8h_source.html  _bittrex_trade_pair_8h_source.html  _gdax_trade_pair_8h_source.html  _trade_pair_8h_source.html  class_bitfinex_trade_pair-members.html  class_bitfinex_trade_pair.html  class_bittrex_trade_pair-members.html  class_bittrex_trade_pair.html  class_crypto_pi_main-members.html  class_gdax_trade_pair-members.html  class_trade_pair.html  classes.html  client__gdax_8h_source.html  (+8 more)
cryptopi/oldtest/: CMakeLists.txt  TradePair.h  brandon  brandon.cpp  main  runtests.sh
html/: class_gdax_trade_pair.html  classclient__gdax.html  doxygen.css  functions_func.html  functions_rela.html  index.html  menudata.js  structf__data.html
latex/: class_crypto_pi_main.eps
oldtest/: CMakeCache.txt  Makefile  cmake_install.cmake
test/: cmake_install.cmake  runtests.sh
(+42 files in other folders)
